[package]
name = "bwf"
version = "0.1.0"
authors = ["Sebastian <xxsebastian.klaehnxx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = { git="https://github.com/amethyst/amethyst", branch="main" }
noise = "*"
serde = "*"